--- a/static/style/style.css
+++ b/static/style/style.css
@@ -15,7 +15,11 @@ h1{
 
 
 .content{
-    padding: 2% 10% 2% 10%;
+    padding: 2% 15% 2% 15%;
+}
+.navbar-padding{
+    padding-left: 15%;
+    padding-right: 15%;
 }
 
 a.task-btn, a.folder-btn{
@@ -33,17 +37,26 @@ p{
     height: 6vh;
 }
 
+.login-field{
+    width: 100%;
+    font-size: 2rem;
+    height: 4vh;
+}
+.form-error{
+    color: lightcoral;
+}
+
 @media (max-width: 1400px) {
     h1{
-        font-size: 6rem;
+        font-size: 5rem;
     }
     h3{
         font-size: 2.5rem;
     }
     
     a.task-btn, a.folder-btn{
-        font-size: 1.75rem;
-        min-width: 40%;
+        font-size: 1.5rem;
+        min-width: 25%;
         max-width: 75%; 
         margin-bottom: 5%;
         
@@ -60,23 +73,25 @@ p{
     .content{
         padding: 2% 5% 2% 5%;
     }
+    .navbar-padding{
+        padding-left: 5%;
+        padding-right: 5%;
+    }
     .form-field{
         width: 70%;
-        font-size: 3rem;
-        height: 6vh;
     }
     
     p{
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
 }
 
 @media (max-width: 600px) {
     h1{
-        font-size: 6.5rem;
+        font-size: 4.5rem;
     }
     a.task-btn, a.folder-btn{
-        font-size: 2rem;
+        font-size: 1.3rem;
         max-width: 100%;
         margin-top: 5%;
     }
@@ -93,13 +108,20 @@ p{
     .content{
         padding: 5% 3% 5% 3%;
     }
+    .navbar-padding{
+        padding: 1% 3% 1% 3%;
+    }
+    
     .form-field{
         width: 80%;
-        font-size: 3rem;
         height: 8vh;
     }
+    .login-field{
+        font-size: 2.25 rem;
+        height: 5vh;
+    }
     p{
-        font-size: 2.25rem;
+        font-size: 1.5rem;
     }
 }
 
@@ -110,8 +132,11 @@ p{
 }
 
 @media (max-width: 281px) {
+    h1{
+        font-size: 3.5rem;
+    }
     a.task-btn, a.folder-btn{
-        font-size: 1.5rem;
+        font-size: 1.25rem;
         max-width: 100%;
         margin-top: 5%;
     }
