--- a/templates/base.htm
+++ b/templates/base.htm
@@ -17,25 +17,25 @@
     {% block navbar %}
     {% if current_user.is_authenticated %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-padding">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#"><h3>Tasker.</h3></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{{url_for('add_folder')}}">Add Folder</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
-            </li>
-            
-          </ul>
-          
-        </div>
-      </div>
-    </nav>
+            <div class="container-fluid py-0 px-auto">
+              <a class="navbar-brand light-text"><h3>Tasker.</h3></a>
+              <button class="navbar-toggler" type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#navbarNavAltMarkup"
+                  aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                  aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+                <div class="collapse navbar-collapse text-right" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ms-auto">
+                        <a class="nav-link active light-text"
+                            aria-current="page"
+                            href="{{url_for('add_folder')}}">Add Folder</a>
+                        <a class="nav-link light-text" href="{{url_for('logout')}}">Logout</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
     {% endif %}
     {% endblock %}
   </div>
