changed button placement slightly

--- a/templates/index.htm
+++ b/templates/index.htm
@@ -65,11 +65,11 @@
         <div class="container-fluid text-center content py-5 my-5">
             <h1>Welcome, Friend.</h1>
             <div class="row justify-content-center">
-                <div class="col-xxl-1 col-xl-2 col-md-2 col-xs-4 col-8 px-2
+                <div class="col-xxl-2 col-xl-3 col-md-4 col-sm-6 col-8 px-2
                     my-2">
                     <a href="{{url_for('register_user')}}" class="btn btn-lg btn-light btn-outline-dark home-btn">Register</a>
                 </div>
-                <div class="col-xxl-1 col-xl-2 col-md-2 col-xs-4 col-8 px-2
+                <div class="col-xxl-2 col-xl-3 col-md-4 col-sm-6 col-8 px-2
                     my-2">
                     <a class="btn btn-lg btn-outline-dark btn-light home-btn" href="{{url_for('login')}}">Login</a>
                 </div>
