--- a/static/style/style.css
+++ b/static/style/style.css
@@ -96,8 +96,8 @@ p{
         margin-top: 5%;
     }
     .home-btn{
+        padding: 5%;
         font-size: 2rem;
-        min-width: 70%;
         max-width: 80%;
         margin-top: 2%;
 
